@@ -11,7 +11,7 @@
 ###########################################################
 package Devel::NYTProf::Apache;
 
-our $VERSION = '3.02';
+our $VERSION = '3.11';
 
 BEGIN {
 
