@@ -13,6 +13,13 @@ add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
 string eval merging - must allow at least viewing of source for called subs defined in a nested eval
 
+=head2 Changes in Devel::NYTProf 3.11 (svn 1157) 9th March 2010
+
+  Refactored I/O to create an API that encapsulates the data
+    file format, thanks to Nicholas Clark.
+  Updated and optimized nytprofmerge to use the new API
+    thanks to Nicholas Clark.
+
 =head2 Changes in Devel::NYTProf 3.02 (svn 1094) 5th March 2010
 
   Fixed handling of usecputime=1 option and updated
